- Now Specfically Logs Booting Clover Instances
  * Now separately identifies Clover instances in the debug log when these are booted
- Changes Misc Token Names for Internal Consistency or to better reflect function
  * 'disable_mac_compat_check' to 'disable_compat_check'
  * 'set_mac_boot_args' to 'set_boot_args'
  * 'protect_mac_nvram' to 'protect_nvram'
  * 'reinforce_apfs' to 'sync_apfs'
- Implements Upstream 'firmware_bootnum' manual stanzas (Skipped in v0.13.1.AA)
  * Misc fixes appear to have resolved previously experienced issues
- Fixes Potential Memory Corruption Issues in the Ext2, Ext4 and HFS Drivers
  * Fixes also implemented upstream
  * Users should change earlier versions of these drivers for current ones
  * Copies available from upstream post v0.13.1 releases or after building RefindPlus
- Applies Multiple Code Quality Fixes
  * Fixes several issues identified by static analysis of the code base
- Fixes Default Timeout Setting
  * Was previously set to 20 seconds and not disabled as documented
- Fixes Repeated Icon Scaling on HiDPI Monitors
  * Icons on HiDPI monitors were repeatedly scaled up on each return to the main screen from external screens
- Adds "active_csr" config token to allow implementing a CSR policy
  * Allows ensuring a particular CSR policy is always actively implemented
  * Previously passively left whatever was previously set unchanged.
- Always Activates Certificate Write Prevention on Windows
  * Now always activated on Windows boot regardless of whether Legacy or UEFI Windows is detected
- Adds OpenCore and Clover to "use_graphics_for"
  * The default screen mode on booting these boot loaders can now be set to graphics mode.
- Incoporates a Variant of the Upstream Logging
  * Combines an equivalent of the upstream logging feature with the existing logging.
  * The previously disabled "log_level" configuration token can now take a numeric log level
    (0 to 4), with levels 1 to 3 meaning increasing levels of logging.