@@ -405,7 +405,7 @@ typedef struct {
    BOOLEAN          TextRenderer;
    BOOLEAN          UgaPassThrough;
    BOOLEAN          ProvideConsoleGOP;
-   BOOLEAN          ReinstallGOP;
+   BOOLEAN          ReloadGOP;
    BOOLEAN          UseDirectGop;
    BOOLEAN          ContinueOnWarning;
    BOOLEAN          ForceTRIM;
