@@ -134,7 +134,7 @@ REFIT_CONFIG GlobalConfig = {
     /* TextRenderer = */ FALSE,
     /* UgaPassThrough = */ FALSE,
     /* ProvideConsoleGOP = */ FALSE,
-    /* ReinstallGOP = */ FALSE,
+    /* ReloadGOP = */ FALSE,
     /* UseDirectGop = */ FALSE,
     /* ContinueOnWarning = */ FALSE,
     /* ForceTRIM = */ FALSE,
